contentcuration/contentcuration/static/less/admin_grid.less
@import "global-variables.less";

#admin-page {
	.nav-tabs {
		grid-column: 1 / span 3;
		grid-row: 1;
	}
	.tab-pane {
		grid-column: 1 / span 3;
		display: none;
	}
	.tab-pane.active {
		display: grid;
		min-height: 0;
		height: 100%;
		grid-template-rows: min-content auto min-content;

		.admin_table.user_list .grid_row, .header_row.user_list{
			grid-template-columns: 2.5fr 3fr repeat(3, minmax(max-content, 1fr)) 5em;
		}
		.admin_table.channel_list .grid_row, .header_row.channel_list{
			grid-template-columns: 2.5fr minmax(10em, 1fr) minmax(10em, 1fr) repeat(3, minmax(max-content, 1fr)) 5em;
		}
		.can_edit, .editors{
			display: grid;
			grid-template-columns: max-content 0em;
			margin: auto;		
		}
		.table_actions{
			grid-row: 1 / span 1;
			grid-column-gap: 4px;
			width: 100%;
			display: grid;
			grid-template-rows: auto 2em;
		}
		.pull-right {
			grid-column: 5;
		}

		.admin_table.user_list, .admin_table.channel_list {
			grid-row: 2 / span 1;
		}

		.admin_table .grid_row, .header_row {
			display: grid;
			grid-gap: 5px;
		}
	}

	.admin_table_wrapper {
		.spinner {
			display: grid;
			grid-template-columns: auto max-content auto;
			grid-template-rows: auto max-content auto;

			div {
				grid-row: 2;
				grid-column: 2;
			}
		}
	}
	
	.table_actions{
		.select_all {
			grid-row: 2;
			grid-column: 1;
		}
		#email_selected_users { 
			grid-row: 2;
			grid-column: 5;
		}
		.action_grid{
			grid-row: 1;
			grid-column: 1 / span 5;

			display: grid;
			grid-template-columns: max-content max-content max-content auto max-content;
		}
	}
}

